# Websocket-rs

./: .env  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
benches/: benchmark.rs
certs/: cert.pem  key.pem
examples/: client.rs
src/: config.rs  lib.rs  main.rs
src/server/: client.rs  handler.rs  health.rs  message.rs  mod.rs  stream.rs
src/server/middleware/: mod.rs  rate_limit.rs  validation.rs
src/utils/: error.rs  mod.rs
tests/: integration.rs
